--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/source-strapi": "^0.2.0",
     "@gridsome/transformer-remark": "^0.6.4",
-    "bootstrap": "^5.0.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "gridsome": "^0.7.0",
     "markdown-it": "^12.0.6"
   }
